--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,23 @@
 /* tag selectors */
 
 h1{
-  display: inline-block;
-    margin-top: 110px;
+    display: inline-block;
+    margin-top: 40px;
+    font-family: 'Sacramento', cursive;
 }
 
 
 body{
   margin:0;
   text-align: center;
+  /* font-family: sans-serif;*/
+  font-family: 'Merriweather', serif; 
 
   
+}
+
+h2,h3{
+  font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -22,8 +29,9 @@ body{
 .top-container{
   background-color: #9ED2C6;
   margin-top: 0;
+  padding-top: 100px;
   width:100%;
-  height:800px;
+  height:600px;
   /* text-align: center; */
   
   bottom:21px;
@@ -46,9 +54,23 @@ body{
 
 .mountain{
   position: absolute;
-  bottom:0px;
-  right:400px;
+  bottom: 0px;
+  right: 279px;
+  height: 491px;
   
+}
+
+.red{
+  height: 100px;
+  width:100px;
+  background-color: red;
+}
+
+.blue{
+  height: 100px;
+  width:100px;
+  background-color: blue;
+
 }
 
 
