--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ h2,h3{
 
 
 .top-container{
-  background-color: #9ED2C6;
+  background-color: #ddfbf4;
   margin-top: 0;
   padding-top: 100px;
   width:100%;
@@ -60,16 +60,12 @@ h2,h3{
   
 }
 
-.red{
-  height: 100px;
-  width:100px;
-  background-color: red;
+.middle-container{
+ 
 }
 
-.blue{
-  height: 100px;
-  width:100px;
-  background-color: blue;
+.bottom-container{
+ 
 
 }
 
