--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,14 @@ h2,h3{
   font-family: 'Montserrat', sans-serif;
 }
 
+h1, h2 {
+  color:  #66BFBF;
+}
+
+h3 , a {
+  color: #11999E;
+}
+
 
 
 /* class selectors */
