--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,11 @@ h1{
     margin-top: 40px;
     font-family: 'Sacramento', cursive;
     font-size: 5.625rem;
+    line-height: 2;
+}
+
+h2{
+  font-weight: normal;
 }
 
 
@@ -81,6 +86,28 @@ h3 , a {
   text-decoration: underline;
 }
 
+.skill-row{
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
+  
+}
+
+.skill-img{
+  width:25%;
+  float: left;
+  margin-right: 30px;
+}
+.skill-img2{
+  width:25%;
+  float:right;
+  margin-left:30px;
+}
+
+/* .skill-text{
+  margin-left: 30px;
+} */
 
 
 
