--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,12 @@ h2{
 a{
   text-decoration: none;
   margin: 1rem 1rem;
+  
 }
 
 
 body{
+  background-color: #EAE3D2;
   margin:0;
   text-align: center;
   /* font-family: sans-serif;*/
@@ -32,11 +34,15 @@ h2,h3{
 }
 
 h1, h2 {
-  color:  #66BFBF;
+  color:  #1C3879;
 }
 
-h3 , a {
-  color: #11999E;
+a{
+  color: #1C3879;
+}
+
+h3  {
+  color: #1C3879;
 }
 
 hr{
@@ -44,7 +50,7 @@ hr{
     width: 3%;
     border-width: 6px;
     border-bottom: none;
-    border-color: #EAF6F6;
+    border-color: #F9F5EB;
     margin: 5rem auto;
 }
 
@@ -55,7 +61,7 @@ hr{
 
 
 .top-container{
-  background-color: #EAF6F6;
+  background-color: #607EAA;
   margin-top: 0;
   padding-top: 100px;
   width:100%;
@@ -130,13 +136,20 @@ hr{
 
 .saad-intro{
   height: 13rem;
-  width: 68rem;
-  display: inline;
-  font-size: 13rem;
+    width: 68rem;
+    display: inline;
+    font-size: 13rem;
+    position: absolute;
+    right: 19rem;
+    bottom: 30%;
+    line-height: 1;
+}
+
+.title-img{
+  height: 43rem;
   position: absolute;
-  right: 5rem;
-  bottom: 30%;;
-  line-height: 1;
+  right: 0;
+  bottom: 0rem;
 }
 
 .btn {
@@ -167,8 +180,8 @@ hr{
 }
 
 .bottom-container{
-  background-color: #66BFBF;
-  color: #11999E;
+  background-color: #607EAA;
+  color: #EAE3D2;
   text-decoration: none;
   margin:0;
   height: 5rem;
