--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ a{
   
 }
 
+a:hover{
+  color:white;
+}
+
 
 body{
   background-color: #EAE3D2;
@@ -179,6 +183,7 @@ hr{
 }
 
 .btn {
+  font-family: 'Montserrat', sans-serif;
   background:  #11cdd4;
   background-image: -webkit-linear-gradient(top,  #11cdd4, #11999e);
   background-image: -moz-linear-gradient(top,  #11cdd4, #11999e);
